<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TournUp</string>
    <string name="content_desc">Image</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_host">Host</string>
    <string name="title_activity_join">Join</string>
    <string name="title_activity_verify">Verify</string>
    <string name="title_activity_match">Current Match</string>
    <string name="current_opponent">Your current opponent is</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_id">358751534281138</string>
    <string name="logging_in">Logging in…</string>
    <string name="title_activity_tournament_info">Join</string>
    <string name="title_activity_host_details">Host</string>
    <string name="entry_fee">Entry Fee:</string>
    <string name="prize_percentage">Prize %:</string>
    <string name="max_people">Max Participants: </string>
    <string name="location">Location</string>
    <string name="tournament_name">Tournament Name</string>
    <string name="money">$</string>
    <string name="percent">%</string>
    <string name="title_activity_waiting_screen">Results</string>
    <string name="current_rankings">Rankings</string>
    <string name="title_activity_share">Share</string>
    <string name="title_activity_waiting">TournUp</string>

</resources>
