<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <WebView
            android:id="@+id/web_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible" />

        <LinearLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:context="mipsmob.tournup.activities.HostDetailsActivity">


            <TextView
                android:id="@+id/name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:text="@string/tournament_name" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:textSize="32sp"
                android:paddingLeft="8sp"
                android:paddingStart="8sp"
                android:paddingRight="8sp"
                android:paddingEnd="8sp"
                android:layout_marginBottom="16dp"
                android:inputType="text"
                android:background="@drawable/edit_text_background" />

            <TextView
                android:id="@+id/location_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:text="@string/location" />

            <EditText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:textSize="32sp"
                android:paddingLeft="8sp"
                android:paddingStart="8sp"
                android:paddingRight="8sp"
                android:paddingEnd="8sp"
                android:layout_marginBottom="32dp"
                android:inputType="textPostalAddress"
                android:background="@drawable/edit_text_background" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/entry_fee_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="32sp"
                    android:text="@string/entry_fee" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/money"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:gravity="end"
                    android:textSize="32sp"
                    android:text="@string/money" />

                <EditText
                    android:id="@+id/cost"
                    android:layout_width="60dp"
                    android:layout_height="48dp"
                    android:gravity="center"
                    android:inputType="number"
                    android:textSize="32sp"
                    android:background="@drawable/edit_text_background" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:gravity="end"
                    android:textSize="32sp"
                    android:textColor="@android:color/transparent"
                    android:text="@string/percent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/prize_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="32sp"
                    android:text="@string/prize_percentage" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/prize_percentage"
                    android:layout_width="60dp"
                    android:layout_height="48dp"
                    android:gravity="center"
                    android:inputType="number"
                    android:textSize="32sp"
                    android:background="@drawable/edit_text_background" />

                <TextView
                    android:id="@+id/percentage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:gravity="end"
                    android:textSize="32sp"
                    android:text="@string/percent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginBottom="40dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/max_people_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="32sp"
                    android:text="@string/max_people" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/max_people"
                    android:layout_width="60dp"
                    android:layout_height="48dp"
                    android:gravity="center"
                    android:inputType="number"
                    android:textSize="32sp"
                    android:background="@drawable/edit_text_background" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:gravity="end"
                    android:textSize="32sp"
                    android:textColor="@android:color/transparent"
                    android:text="@string/percent" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/create_tourny"
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:contentDescription="@string/content_desc"
                android:background="@drawable/go_button" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>